[package]
name = "rust-arduino-blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
version = "*"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"